- Corregido un bug introducido con Java 7u21 que no permitía localizar correctamente el programa con el que se va a editar el fichero. - Limpieza de código. - Incorporación del API de propiedades de Java que sustituye al uso del fichero de propiedades temporal. - Autorellenado con el programa configurado por defecto en el sistema operativo para abrir el tipo de documento que se quiere editar/visualizar (Windows). - Corrección de los mensajes para sistemas IOs.
Former-commit-id: 85ebaf9a2c1bcfb96b665429dd656d64bdca3a29